--- a/dumbhippo/trunk/server/web/css3/im-account-positions.css
+++ b/dumbhippo/trunk/server/web/css3/im-account-positions.css
@@ -33,3 +33,8 @@
 #dhAddImPopupHeader {
 	margin-bottom:  6px;
 }
+
+.dh-im-address {
+	padding-left:	8px;
+}
+
